# kjobwidgets

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5JobWidgetsConfig.cmake.in  KF6JobWidgetsConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kuiserver2jobtrackertest.cpp  kuiserver2jobtrackertest2.cpp  pythontest.py
po/af/: kjobwidgets5_qt.po
po/ar/: kjobwidgets5_qt.po
po/as/: kjobwidgets5_qt.po
po/ast/: kjobwidgets5_qt.po
po/az/: kjobwidgets5_qt.po
po/be/: kjobwidgets5_qt.po
po/be@latin/: kjobwidgets5_qt.po
po/bg/: kjobwidgets5_qt.po
po/bn/: kjobwidgets5_qt.po
po/bn_IN/: kjobwidgets5_qt.po
po/br/: kjobwidgets5_qt.po
po/bs/: kjobwidgets5_qt.po
po/ca/: kjobwidgets5_qt.po
po/ca@valencia/: kjobwidgets5_qt.po
po/crh/: kjobwidgets5_qt.po
po/cs/: kjobwidgets5_qt.po
po/csb/: kjobwidgets5_qt.po
po/cy/: kjobwidgets5_qt.po
po/da/: kjobwidgets5_qt.po
po/de/: kjobwidgets5_qt.po
po/el/: kjobwidgets5_qt.po
po/en/: kjobwidgets5_qt.po
po/en_GB/: kjobwidgets5_qt.po
po/eo/: kjobwidgets5_qt.po
po/es/: kjobwidgets5_qt.po
po/et/: kjobwidgets5_qt.po
po/eu/: kjobwidgets5_qt.po
po/fa/: kjobwidgets5_qt.po
po/fi/: kjobwidgets5_qt.po
po/fr/: kjobwidgets5_qt.po
po/fy/: kjobwidgets5_qt.po
po/ga/: kjobwidgets5_qt.po
po/gd/: kjobwidgets5_qt.po
po/gl/: kjobwidgets5_qt.po
po/gu/: kjobwidgets5_qt.po
po/ha/: kjobwidgets5_qt.po
po/he/: kjobwidgets5_qt.po
po/hi/: kjobwidgets5_qt.po
po/hne/: kjobwidgets5_qt.po
po/hr/: kjobwidgets5_qt.po
po/hsb/: kjobwidgets5_qt.po
po/hu/: kjobwidgets5_qt.po
po/hy/: kjobwidgets5_qt.po
po/ia/: kjobwidgets5_qt.po
po/id/: kjobwidgets5_qt.po
po/is/: kjobwidgets5_qt.po
po/it/: kjobwidgets5_qt.po
po/ja/: kjobwidgets5_qt.po
po/ka/: kjobwidgets5_qt.po
po/kk/: kjobwidgets5_qt.po
po/km/: kjobwidgets5_qt.po
po/kn/: kjobwidgets5_qt.po
po/ko/: kjobwidgets5_qt.po
po/ku/: kjobwidgets5_qt.po
po/lb/: kjobwidgets5_qt.po
po/lt/: kjobwidgets5_qt.po
po/lv/: kjobwidgets5_qt.po
po/mai/: kjobwidgets5_qt.po
po/mk/: kjobwidgets5_qt.po
po/ml/: kjobwidgets5_qt.po
po/mr/: kjobwidgets5_qt.po
po/ms/: kjobwidgets5_qt.po
po/nb/: kjobwidgets5_qt.po
po/nds/: kjobwidgets5_qt.po
po/ne/: kjobwidgets5_qt.po
po/nl/: kjobwidgets5_qt.po
po/nn/: kjobwidgets5_qt.po
po/oc/: kjobwidgets5_qt.po
po/or/: kjobwidgets5_qt.po
po/pa/: kjobwidgets5_qt.po
po/pl/: kjobwidgets5_qt.po
po/ps/: kjobwidgets5_qt.po
po/pt/: kjobwidgets5_qt.po
po/pt_BR/: kjobwidgets5_qt.po
po/ro/: kjobwidgets5_qt.po
po/ru/: kjobwidgets5_qt.po
po/se/: kjobwidgets5_qt.po
po/si/: kjobwidgets5_qt.po
po/sk/: kjobwidgets5_qt.po
po/sl/: kjobwidgets5_qt.po
po/sq/: kjobwidgets5_qt.po
po/sr/: kjobwidgets5_qt.po
po/sr@ijekavian/: kjobwidgets5_qt.po
po/sr@ijekavianlatin/: kjobwidgets5_qt.po
po/sr@latin/: kjobwidgets5_qt.po
po/sv/: kjobwidgets5_qt.po
po/ta/: kjobwidgets5_qt.po
po/te/: kjobwidgets5_qt.po
po/tg/: kjobwidgets5_qt.po
po/th/: kjobwidgets5_qt.po
po/tr/: kjobwidgets5_qt.po
po/tt/: kjobwidgets5_qt.po
po/ug/: kjobwidgets5_qt.po
po/uk/: kjobwidgets5_qt.po
po/uz/: kjobwidgets5_qt.po
po/uz@cyrillic/: kjobwidgets5_qt.po
po/vi/: kjobwidgets5_qt.po
po/wa/: kjobwidgets5_qt.po
po/x-test/: kjobwidgets5_qt.po
po/xh/: kjobwidgets5_qt.po
po/zh_CN/: kjobwidgets5_qt.po
po/zh_HK/: kjobwidgets5_qt.po
po/zh_TW/: kjobwidgets5_qt.po
poqm/af/: kjobwidgets6_qt.po
poqm/ar/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/as/: kjobwidgets6_qt.po
poqm/ast/: kjobwidgets6_qt.po
poqm/az/: kjobwidgets6_qt.po
poqm/be/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/be@latin/: kjobwidgets6_qt.po
poqm/bg/: kjobwidgets6_qt.po
poqm/bn/: kjobwidgets6_qt.po
poqm/bn_IN/: kjobwidgets6_qt.po
poqm/br/: kjobwidgets6_qt.po
poqm/bs/: kjobwidgets6_qt.po
poqm/ca/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/ca@valencia/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/crh/: kjobwidgets6_qt.po
poqm/cs/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/csb/: kjobwidgets6_qt.po
poqm/cy/: kjobwidgets6_qt.po
poqm/da/: kjobwidgets6_qt.po
poqm/de/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/el/: kjobwidgets6_qt.po
poqm/en/: kjobwidgets6_qt.po
poqm/en_GB/: kjobwidgets6_qt.po
poqm/eo/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/es/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/et/: kjobwidgets6_qt.po
poqm/eu/: kjobwidgets6_qt.po
poqm/fa/: kjobwidgets6_qt.po
poqm/fi/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/fr/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/fy/: kjobwidgets6_qt.po
poqm/ga/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/gd/: kjobwidgets6_qt.po
poqm/gl/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/gu/: kjobwidgets6_qt.po
poqm/ha/: kjobwidgets6_qt.po
poqm/he/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
poqm/hi/: kjobwidgets6_qt.po
poqm/hne/: kjobwidgets6_qt.po
poqm/hr/: kjobwidgets6_qt.po
poqm/hsb/: kjobwidgets6_qt.po
poqm/hu/: kjobwidgets6_qt.po
poqm/hy/: kjobwidgets6_qt.po
poqm/ia/: kjobwidgets5_qt.po  kjobwidgets6_qt.po
python/: CMakeLists.txt  bindings.h  typesystem_kjobwidgets.xml
src/: CMakeLists.txt  Messages.sh  config-kjobwidgets.h.cmake  debug.cpp  debug.h  kabstractwidgetjobtracker.cpp  kabstractwidgetjobtracker.h  kabstractwidgetjobtracker_p.h  kdialogjobuidelegate.cpp  kdialogjobuidelegate.h  kinhibitionjobtracker.cpp  kinhibitionjobtracker.h  kinhibitionjobtracker_p.h  kjobtrackerformatters.cpp  kjobtrackerformatters_p.h  kjobwidgets-index.qdoc  kjobwidgets.cpp  kjobwidgets.h  kjobwidgets.qdoc  kjobwidgets.qdocconf  knotificationjobuidelegate.h  kstatusbarjobtracker.cpp  kstatusbarjobtracker.h  kstatusbarjobtracker_p.h  kuiserverjobtracker.cpp  kuiserverjobtracker.h  kuiserverjobtracker_p.h  kuiserverv2jobtracker.cpp  kuiserverv2jobtracker.h  kuiserverv2jobtracker_p.h  kwidgetjobtracker.cpp  kwidgetjobtracker.h  kwidgetjobtracker_p.h  org.kde.JobView.xml  org.kde.JobViewV2.xml
tests/: CMakeLists.txt  kjobcreator.cpp  kjobcreator.h  kjobcreator.ui  kjobtrackerstest.cpp  kjobtrackerstest.h
(+109 files in other folders)
